--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.2.2",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "npm": "^10.5.0",
     "react": "^18",
     "react-dom": "^18"
   },
