--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GOOGLE_ID=895857195938-qfqt58d93vohfcam4k2tbl2leimk877r.apps.googleusercontent.c
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URL=mongodb+srv://sanazbaghban2551:rFC9Gkvzf7s6D4lS@cluster0.wkocq4w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXTAUTH_URL_INTERNAL=http://localcost:3000
+NEXTAUTH_SECRET=Cgg6/1YzM2N5NWNz5x4V6tqgwE22ZW3aSep/ogXKtho=
